fix upload path

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>rustrogue</title>
 </head>
 <body>
+<h1>rustrogue</h1>
 <canvas id="canvas" width="640" height="480"></canvas>
+<h2>Controls</h2>
+<ul>
+    <li><kbd>←</kbd>/<kbd>Num4</kbd>/<kbd>H</kbd> - Move Left</li>
+    <li><kbd>→</kbd>/<kbd>Num6</kbd>/<kbd>L</kbd> - Move Right</li>
+    <li><kbd>↑</kbd>/<kbd>Num8</kbd>/<kbd>K</kbd> - Move Up</li>
+    <li><kbd>↓</kbd>/<kbd>Num2</kbd>/<kbd>J</kbd> - Move Down</li>
+</ul>
 <script src="/rustrogue.js"></script>
 <script>
     window.addEventListener("load", async () => {
