--- a/index.html
+++ b/index.html
@@ -1,25 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rustrogue</title>
-</head>
-<body>
-<h1>rustrogue</h1>
-<canvas id="canvas" width="640" height="480"></canvas>
-<h2>Controls</h2>
-<ul>
-    <li><kbd>←</kbd>/<kbd>Num4</kbd>/<kbd>H</kbd> - Move Left</li>
-    <li><kbd>→</kbd>/<kbd>Num6</kbd>/<kbd>L</kbd> - Move Right</li>
-    <li><kbd>↑</kbd>/<kbd>Num8</kbd>/<kbd>K</kbd> - Move Up</li>
-    <li><kbd>↓</kbd>/<kbd>Num2</kbd>/<kbd>J</kbd> - Move Down</li>
-</ul>
-<script src="/rustrogue.js"></script>
-<script>
-    window.addEventListener("load", async () => {
+  </head>
+  <body class="bg-gray-100 font-sans text-slate-900 antialiased min-h-screen">
+    <noscript>You need to enable JavaScript to run this game.</noscript>
+    <div class="flex flex-col min-h-screen">
+      <header class="container mx-auto sticky top-0 z-40 bg-gray-100">
+        <div
+          class="flex h-16 items-center justify-between border-b border-b-slate-200 py-4"
+        >
+          <h1 class="text-3xl font-bold tracking-tight text-gray-900">
+            rustrogue
+          </h1>
+          <nav>
+            <a href="https://github.com/ToppleTheNun/rustrogue">
+              <div
+                class="flex h-10 w-10 items-center justify-center space-x-2 rounded-md border border-slate-600 bg-slate-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  class="h-5 w-5 text-white"
+                >
+                  <path
+                    d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+                  ></path>
+                </svg>
+              </div>
+            </a>
+          </nav>
+        </div>
+      </header>
+      <main class="flex flex-1">
+        <div class="container mx-auto py-6 flex flex-1 flex-col gap-8">
+          <section class="flex flex-col">
+            <canvas id="canvas"></canvas>
+          </section>
+          <section class="flex flex-col">
+            <h2 class="text-2xl font-bold tracking-tight text-gray-900">
+              Controls
+            </h2>
+            <ul>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >←</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num4</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >H</kbd
+                >
+                - Move Left
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >→</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num6</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >L</kbd
+                >
+                - Move Right
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >↑</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num8</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >K</kbd
+                >
+                - Move Up
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >↓</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num2</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >J</kbd
+                >
+                - Move Down
+              </li>
+            </ul>
+          </section>
+          <section class="flex flex-col gap-2">
+            <h2 class="text-2xl font-bold tracking-tight text-gray-900">Log</h2>
+            <ul class="p-3 bg-white rounded-lg" id="log"></ul>
+          </section>
+        </div>
+      </main>
+      <footer class="container mx-auto text-gray-900">
+        <div
+          class="flex flex-col items-center justify-between gap-4 border-t border-t-slate-200 py-10 md:h-24 md:flex-row md:py-0"
+        >
+          <p class="text-center text-sm md:text-left">
+            Written by
+            <a
+              href="https://github.com/ToppleTheNun"
+              target="_blank"
+              rel="noreferrer"
+              class="font-medium underline underline-offset-4"
+              >ToppleTheNun</a
+            >.
+          </p>
+          <p class="text-center text-sm md:text-left">
+            The source code is available on
+            <a
+              href="https://github.com/ToppleTheNun/rustrogue"
+              target="_blank"
+              rel="noreferrer"
+              class="font-medium underline underline-offset-4"
+              >GitHub</a
+            >.
+          </p>
+        </div>
+      </footer>
+    </div>
+    <script src="/rustrogue.js"></script>
+    <script>
+      window.addEventListener("load", async () => {
         await wasm_bindgen("./rustrogue_bg.wasm");
-    });
-</script>
-</body>
+      });
+    </script>
+    <script type="module" src="/web/index.ts"></script>
+  </body>
 </html>
