--- a/index.html
+++ b/index.html
@@ -113,6 +113,54 @@
                 >
                 - Move Down
               </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num7</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Y</kbd
+                >
+                - Move Up and Left
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num9</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >U</kbd
+                >
+                - Move Up and Right
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num1</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >B</kbd
+                >
+                - Move Down and Left
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >Num3</kbd
+                >
+                /
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >N</kbd
+                >
+                - Move Down and Right
+              </li>
             </ul>
           </section>
           <section class="flex flex-col gap-2">
