--- a/index.html
+++ b/index.html
@@ -161,6 +161,27 @@
                 >
                 - Move Down and Right
               </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >G</kbd
+                >
+                - Pick up item
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >I</kbd
+                >
+                - Show inventory screen
+              </li>
+              <li class="text-gray-500">
+                <kbd
+                  class="px-2 py-1.5 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg"
+                  >D</kbd
+                >
+                - Show drop item screen
+              </li>
             </ul>
           </section>
         </div>
